<resources>
    <string name="app_name">GamingLife</string>
    <string name="HINT_GLID_POW">
        请选择生成GLID的工作量证明(PoW)\n\n
        为了防止恶意注册，服务器要求提交的GLID需要至少8位的工作量证明。服务会也会根据GLID的工作量证明给你初始的资历点数。\n
        越高的工作量证明意味着您的GLID越特别，同时初始的资历点数也越高，但同时也需要更大的运算量。超过16位的工作量证明建议使用计算机进行。
    </string>

    <string name="BUTTON_YES">是</string>
    <string name="BUTTON_NO">否</string>

    <string name="BUTTON_GENERATE_GLID">生成GLID</string>
    <string name="BUTTON_STOP">停止</string>
    <string name="BUTTON_ACCEPT_GLID">使用这个GLID</string>
    <string name="BUTTON_VIEW">查看</string>
    <string name="BUTTON_REGISTER_OR_CHECK_IN">登记/签到</string>
    <string name="BUTTON_SIGN_OUT">注销(!)</string>
    <string name="BUTTON_IMPORT_FROM_QR">扫描二维码导入</string>
    <string name="BUTTON_IMPORT_FROM_QR_IMG">二维码图片导入</string>
    <string name="BUTTON_IMPORT_FROM_TEXT">从文本导入</string>
    <string name="BUTTON_CREATE">创建</string>

    <string name="HINT_PERMISSION_BATCH">为了方便起见，程序需要先申请录音权限\n为了不丢失APP变动数据数据，程序需要申请外部存储权限</string>
    <string name="HINT_PERMISSION_AUDIO_RECORD">为了方便起见，程序需要先申请录音权限</string>
    <string name="HINT_PERMISSION_EXTERNAL_STORAGE">为了不丢失APP变动数据数据，程序需要申请外部存储权限</string>

    <string name="HINT_PERMISSION_CAMERA_QR">扫描二维码需要相机权限</string>
    <string name="HINT_PERMISSION_EXT_STORAGE_QR">从图片扫描二维码需要存储权限</string>

    <string name="HINT_LOAD_PRIVATE_KEY_ERROR">导入GLID失败</string>
    <string name="HINT_PERMISSION_REQUEST_FAIL">无法获取权限，程序退出</string>
    <string name="HINT_TEXT_TIPS">提示</string>
    <string name="HINT_RISK_WHEN_RECORD_DENIED">无法使用录音功能，语音记录及对话功能无法使用</string>
    <string name="HINT_RISK_WHEN_USING_INTERNAL_STORAGE">"无法获取外部存储权限，尝试使用内部存储。\n\n注意：GamingLife的个人数据不会上传服务器，软件卸载后数据将会被系统删除。\n请注意备份数据。\n"</string>

    <string name="FORMAT_BATCH_NUM">"%d组"</string>
    <string name="FORMAT_BATCH_LEFT">"剩余%d组"</string>
    <string name="FORMAT_CALENDAR_M_D">"%d月%d日"</string>

    <string name="FORMAT_GLID_GEN_LOG">尝试次数: %d -> 最大工作量证明: %d\n</string>
    <string name="FORMAT_GLID_GEN_FAIL">没有生成符合标准的GLID\n</string>
    <string name="FORMAT_GLID_GEN_SUCCESS">获得可用的GLID: %s\n工作量证明：%d\n</string>
    <string name="COMMENTS_PRIVATE_KEY">私钥是你账号的唯一证明，请妥善保管且不要泄露给任何人，包括GaminLife官方。</string>
    <string name="COMMENTS_PUBLIC_KEY">GaminLife官方会用你的公钥验证你的账号，你的朋友也可以通过公钥加密给你的信息。\n公钥是安全的，但非必要请不要向大众和陌生人公开你的公钥。</string>
    <string name="COMMENTS_GLID">GLID是你在GamingLife世界的账号，你可以放心公开你的GLID。\n公开你的GLID不会泄露你的任何私密信息。</string>

    <string name="COMMENTS_NO_GLID">
        本机没有任何GLID信息。\n\n
    </string>

    <string name="COMMENTS_ERROR_KEY">
        载入私钥失败。\n
        \n
        注意：您无法通过复制配置文件的方式将您的私钥导入(其它内容不受影响)。\n\n
    </string>

    <string name="COMMENTS_IMPORT_OR_CREATE_GLID">
        你可以通过下方的按钮导入你的用户私钥。\n
        或者你也可以创建一个新的GLID。\n
        \n
        导入或创建后别忘了向GamingLife的世界登记哦。
    </string>

    <string name="VIEW_BACK_TO_TODAY">今日</string>
    <string name="TITLE_STATISTICS">GamingLife (%s)</string>

    <string name="LABEL_TASK_QUANTIFY">量化</string>
    <string name="LABEL_TASK_SINGLE">单次任务</string>
    <string name="LABEL_TASK_BATCH">批次任务</string>
    <string name="LABEL_TASK_NAME">任务名</string>
    <string name="LABEL_TASK_PERIOD">任务周期</string>
    <string name="LABEL_TASK_TIME_REQUIREMENT">时间质量</string>
    <string name="LABEL_TASK_TIME_ESTIMATION">时间长度</string>
    <string name="LABEL_TASK_TYPE">任务类型</string>
    <string name="LABEL_TASK_BATCH_COUNT">批次</string>
    <string name="LABEL_TASK_BATCH_SIZE">单次数量</string>
    <string name="LABEL_MINUTES">分钟</string>
    <string name="LABEL_OPTIONAL_TASK">可选任务</string>
    <string name="LABEL_TASK_DETAIL">任务详情</string>
    <string name="LABEL_PAUSE">暂停</string>
    <string name="LABEL_FINISHED">完成</string>
    <string name="LABEL_CANCEL">取消</string>
    <string name="HINT_LOADING">加载中…</string>

    <string-array name="ARRAY_1_TO_10">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="TASK_PERIOD_ARRAY">
        <item>一次性</item>
        <item>每日</item>
        <item>每周</item>
        <item>每两周</item>
        <item>每月</item>
        <item>每季度</item>
    </string-array>

    <string-array name="TASK_GROUP_DISPLAY_ARRAY">
        <item>创作</item>
        <item>提升</item>
        <item>生活</item>
        <item>放松</item>
        <item>玩乐</item>
        <item>工作</item>
    </string-array>

    <string-array name="TASK_TIME_QUALITY_ARRAY">
        <item>不指定</item>
        <item>碎片时间</item>
        <item>忙里偷闲的时间</item>
        <item>低质量的时间段</item>
        <item>中等质量的时间段</item>
        <item>完全属于自己的时间段</item>
    </string-array>

</resources>