<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/id_layout_with_key"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_text_private_key_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:lines="8"
                android:gravity="center_vertical"
                android:background="@drawable/border_red"
                android:text="@string/COMMENTS_PRIVATE_KEY" />

            <Button
                android:id="@+id/id_button_view_private_key"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/BUTTON_VIEW" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_text_public_key_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:lines="8"
                android:gravity="center_vertical"
                android:background="@drawable/border_green"
                android:text="@string/COMMENTS_PUBLIC_KEY" />

            <Button
                android:id="@+id/id_button_view_public_key"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/BUTTON_VIEW" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_text_glid_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:lines="8"
                android:gravity="center_vertical"
                android:background="@drawable/border_green"
                android:text="@string/COMMENTS_GLID" />

            <Button
                android:id="@+id/id_button_view_glid"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/BUTTON_VIEW" />
        </LinearLayout>

        <TextView
            android:id="@+id/id_place_holder1"
            android:layout_weight="90"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/id_button_register_check_in"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="99"
                android:text="@string/BUTTON_REGISTER_OR_CHECK_IN" />

            <Button
                android:id="@+id/id_button_sign_out"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/BUTTON_SIGN_OUT" />
        </LinearLayout>

        <TextView
            android:id="@+id/id_place_holder2"
            android:layout_weight="9"
            android:layout_width="0dp"
            android:layout_height="0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_layout_without_key"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:id="@+id/id_text_import_or_create_glid_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="15"
            android:text="@string/COMMENTS_IMPORT_OR_CREATE_GLID" />

        <Button
            android:id="@+id/id_button_import_scan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/BUTTON_IMPORT_FROM_QR" />

        <Button
            android:id="@+id/id_button_import_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/BUTTON_IMPORT_FROM_TEXT" />

        <Button
            android:id="@+id/id_button_create"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/BUTTON_CREATE" />
    </LinearLayout>

</LinearLayout>